deploy: c5292a25c9de13ac46d05ebe4d3261edd42fa058

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			}
 			@font-face {
 				font-family: "Noto";
-				src: url(fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-Regular.ttf);
+				src: url(fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-Bold.ttf);
 			}
 			.noto {
 				font-family: "Noto";
@@ -50,8 +50,8 @@
 			<div class="container-fluid">
 				<span class="navbar-text">
 					As at
-					<a href="https://github.com/notofonts/ol-chiki/commit/c9811b4
-"><code>c9811b4
+					<a href="https://github.com/notofonts/ol-chiki/commit/c5292a2
+"><code>c5292a2
 </code></a>
 				</span>
 				<div class="mx-auto order-0">
@@ -60,7 +60,7 @@
 			</div>
 		</nav>
 		<div class="relative">
-			<h1 class="display-3 heading noto">ᱥᱚᱨᱣ ᱮᱢ ᱭᱚᱛᱨᱚ ᱡᱚᱜᱚᱛᱤ ᱥᱟᱱᱛᱤᱱᱭᱟᱭᱚᱥᱣᱟᱛᱚᱱᱛᱨᱭᱟᱬᱟᱝ ᱟᱫᱷᱟᱨᱚᱷ ᱥᱚᱢᱩᱛᱯᱚᱱᱱᱟᱷ ᱠᱚᱢᱚᱯᱤ ᱣᱭᱚᱣᱚᱦᱟᱨᱚᱝ ᱫᱚᱬᱰᱚᱝ ᱠᱟᱨᱭᱚᱦᱳᱨᱟᱬᱟᱝ ᱪᱚ ᱚᱵᱷᱤᱜᱷᱳᱥᱚᱬᱟᱭᱟᱝ ᱱᱤᱨᱫᱤᱥᱴᱟᱱᱟᱝ ᱯᱩᱻᱨᱬᱚᱛᱚᱭᱟ ᱯᱨᱚᱬᱟᱥᱚᱞᱚᱠᱥᱭᱟᱫᱷᱟᱨᱮᱬᱚ ᱥᱚᱠᱥᱭᱚᱛᱮ᱾ ᱥᱛᱚᱨᱚᱧᱪᱚ ᱥᱚᱨᱣ ᱮᱢ ᱭᱚᱛᱨᱚ ᱡᱚᱜᱚᱛᱤ ᱥᱟᱱᱛᱤᱱᱭᱟᱭᱚᱥᱣᱟᱛᱚᱱᱛᱨᱭᱟᱬᱟᱝ ᱟᱫᱷᱟᱨᱚᱷ ᱥᱚᱢᱩᱛᱯᱚᱱᱱᱟᱷ ᱠᱚᱢᱚᱯᱤ ᱣᱭᱚᱣᱚᱦᱟᱨᱚᱝ ᱫᱚᱬᱰᱚᱝ ᱠᱟᱨᱭᱚᱦᱳᱨᱟᱬᱟᱝ ᱪᱚ ᱚᱵᱷᱤᱜᱷᱳᱥᱚᱬᱟᱭᱟᱝ ᱱᱤᱨᱫᱤᱥᱴᱟᱱᱟᱝ ᱯᱩᱻᱨᱬᱚᱛᱚᱭᱟ ᱯᱨᱚᱬᱟᱥᱚᱞᱚᱠᱥᱭᱟᱫᱷᱟᱨᱮᱬᱚ ᱥᱚᱠᱥᱭᱚᱛᱮ᱾ ᱥᱛᱚᱨᱚᱧᱪᱚ</h1>
+			<h1 class="display-3 heading noto">ᱡᱚᱛᱚᱞᱚᱠᱚ ᱱᱚᱢᱚ ᱞᱮᱠᱟᱱᱚ ᱢᱳᱱᱚ ᱟᱨᱚ ᱚᱫᱷᱤᱠᱟᱨᱚ ᱨᱮᱭᱟᱠᱚ ᱢᱩᱪᱳᱛᱚ ᱫᱷᱟᱵᱤᱪᱚ ᱥᱣᱚᱛᱚᱱᱛᱨᱚ ᱦᱩᱭᱩᱠᱚᱟ᱾ ᱟᱜᱩ ᱦᱚᱰᱚ ᱟᱯᱱᱟᱨᱚ ᱡᱚᱛᱚᱞᱚᱠᱚ ᱱᱚᱢᱚ ᱞᱮᱠᱟᱱᱚ ᱢᱳᱱᱚ ᱟᱨᱚ ᱚᱫᱷᱤᱠᱟᱨᱚ ᱨᱮᱭᱟᱠᱚ ᱢᱩᱪᱳᱛᱚ ᱫᱷᱟᱵᱤᱪᱚ ᱥᱣᱚᱛᱚᱱᱛᱨᱚ ᱦᱩᱭᱩᱠᱚᱟ᱾ ᱟᱜᱩ ᱦᱚᱰᱚ ᱟᱯᱱᱟᱨᱚ</h1>
 
 			<div class="container p-5">
 				<h3>Fonts (HEAD build)</h3>
@@ -68,51 +68,63 @@
 				
 				<h4>Noto Sans Ol Chiki</h4>
 				<div class="row align-items-start"><ul>
-<li class="li-0">full<ul>
-<li class="li-1">slim-variable-ttf<ul>
-<li><a href="fonts/NotoSansOlChiki/full/slim-variable-ttf/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
- </ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansOlChiki/full/ttf/NotoSansOlChiki-Regular.ttf"> NotoSansOlChiki-Regular.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/full/ttf/NotoSansOlChiki-Medium.ttf"> NotoSansOlChiki-Medium.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/full/ttf/NotoSansOlChiki-Bold.ttf"> NotoSansOlChiki-Bold.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/full/ttf/NotoSansOlChiki-SemiBold.ttf"> NotoSansOlChiki-SemiBold.ttf</a></li>
- </ul>
-<li class="li-1">variable-ttf<ul>
-<li><a href="fonts/NotoSansOlChiki/full/variable-ttf/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
- </ul>
- </ul>
-<li class="li-0">googlefonts<ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansOlChiki/googlefonts/ttf/NotoSansOlChiki-Regular.ttf"> NotoSansOlChiki-Regular.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/googlefonts/ttf/NotoSansOlChiki-Medium.ttf"> NotoSansOlChiki-Medium.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/googlefonts/ttf/NotoSansOlChiki-Bold.ttf"> NotoSansOlChiki-Bold.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/googlefonts/ttf/NotoSansOlChiki-SemiBold.ttf"> NotoSansOlChiki-SemiBold.ttf</a></li>
- </ul>
-<li class="li-1">variable-ttf<ul>
-<li><a href="fonts/NotoSansOlChiki/googlefonts/variable-ttf/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
- </ul>
- </ul>
 <li class="li-0">unhinted<ul>
 <li class="li-1">slim-variable-ttf<ul>
 <li><a href="fonts/NotoSansOlChiki/unhinted/slim-variable-ttf/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
  </ul>
-<li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-Regular.ttf"> NotoSansOlChiki-Regular.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-Medium.ttf"> NotoSansOlChiki-Medium.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-Bold.ttf"> NotoSansOlChiki-Bold.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-SemiBold.ttf"> NotoSansOlChiki-SemiBold.ttf</a></li>
+<li class="li-1">variable<ul>
+<li><a href="fonts/NotoSansOlChiki/unhinted/variable/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
  </ul>
-<li class="li-1">variable-ttf<ul>
-<li><a href="fonts/NotoSansOlChiki/unhinted/variable-ttf/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansOlChiki/unhinted/otf/NotoSansOlChiki-Regular.otf"> NotoSansOlChiki-Regular.otf</a></li>
+<li><a href="fonts/NotoSansOlChiki/unhinted/otf/NotoSansOlChiki-Bold.otf"> NotoSansOlChiki-Bold.otf</a></li>
+<li><a href="fonts/NotoSansOlChiki/unhinted/otf/NotoSansOlChiki-Medium.otf"> NotoSansOlChiki-Medium.otf</a></li>
+<li><a href="fonts/NotoSansOlChiki/unhinted/otf/NotoSansOlChiki-SemiBold.otf"> NotoSansOlChiki-SemiBold.otf</a></li>
+ </ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-Bold.ttf"> NotoSansOlChiki-Bold.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-Regular.ttf"> NotoSansOlChiki-Regular.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-SemiBold.ttf"> NotoSansOlChiki-SemiBold.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/unhinted/ttf/NotoSansOlChiki-Medium.ttf"> NotoSansOlChiki-Medium.ttf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">googlefonts<ul>
+<li class="li-1">variable<ul>
+<li><a href="fonts/NotoSansOlChiki/googlefonts/variable/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
+ </ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansOlChiki/googlefonts/ttf/NotoSansOlChiki-Bold.ttf"> NotoSansOlChiki-Bold.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/googlefonts/ttf/NotoSansOlChiki-Regular.ttf"> NotoSansOlChiki-Regular.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/googlefonts/ttf/NotoSansOlChiki-SemiBold.ttf"> NotoSansOlChiki-SemiBold.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/googlefonts/ttf/NotoSansOlChiki-Medium.ttf"> NotoSansOlChiki-Medium.ttf</a></li>
  </ul>
  </ul>
 <li class="li-0">hinted<ul>
 <li class="li-1">ttf<ul>
-<li><a href="fonts/NotoSansOlChiki/hinted/ttf/NotoSansOlChiki-Regular.ttf"> NotoSansOlChiki-Regular.ttf</a></li>
-<li><a href="fonts/NotoSansOlChiki/hinted/ttf/NotoSansOlChiki-Medium.ttf"> NotoSansOlChiki-Medium.ttf</a></li>
 <li><a href="fonts/NotoSansOlChiki/hinted/ttf/NotoSansOlChiki-Bold.ttf"> NotoSansOlChiki-Bold.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/hinted/ttf/NotoSansOlChiki-Regular.ttf"> NotoSansOlChiki-Regular.ttf</a></li>
 <li><a href="fonts/NotoSansOlChiki/hinted/ttf/NotoSansOlChiki-SemiBold.ttf"> NotoSansOlChiki-SemiBold.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/hinted/ttf/NotoSansOlChiki-Medium.ttf"> NotoSansOlChiki-Medium.ttf</a></li>
+ </ul>
+ </ul>
+<li class="li-0">full<ul>
+<li class="li-1">slim-variable-ttf<ul>
+<li><a href="fonts/NotoSansOlChiki/full/slim-variable-ttf/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
+ </ul>
+<li class="li-1">variable<ul>
+<li><a href="fonts/NotoSansOlChiki/full/variable/NotoSansOlChiki[wght].ttf"> NotoSansOlChiki[wght].ttf</a></li>
+ </ul>
+<li class="li-1">otf<ul>
+<li><a href="fonts/NotoSansOlChiki/full/otf/NotoSansOlChiki-Regular.otf"> NotoSansOlChiki-Regular.otf</a></li>
+<li><a href="fonts/NotoSansOlChiki/full/otf/NotoSansOlChiki-Bold.otf"> NotoSansOlChiki-Bold.otf</a></li>
+<li><a href="fonts/NotoSansOlChiki/full/otf/NotoSansOlChiki-Medium.otf"> NotoSansOlChiki-Medium.otf</a></li>
+<li><a href="fonts/NotoSansOlChiki/full/otf/NotoSansOlChiki-SemiBold.otf"> NotoSansOlChiki-SemiBold.otf</a></li>
+ </ul>
+<li class="li-1">ttf<ul>
+<li><a href="fonts/NotoSansOlChiki/full/ttf/NotoSansOlChiki-Bold.ttf"> NotoSansOlChiki-Bold.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/full/ttf/NotoSansOlChiki-Regular.ttf"> NotoSansOlChiki-Regular.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/full/ttf/NotoSansOlChiki-SemiBold.ttf"> NotoSansOlChiki-SemiBold.ttf</a></li>
+<li><a href="fonts/NotoSansOlChiki/full/ttf/NotoSansOlChiki-Medium.ttf"> NotoSansOlChiki-Medium.ttf</a></li>
  </ul>
  </ul>
  </ul></div>
@@ -132,11 +144,14 @@
 
 				<ul>
 										<li>
-						<a href="fontbakery/googlefonts-NotoSansOlChiki-report.html">FontBakery Report (Google Fonts)</a>
+						<a href="fontbakery/notofonts-NotoSansOlChiki-googlefonts-report.html">FontBakery Report (Google Fonts)</a>
 					</li>
 									</ul>
 
 				<ul>
+										<li>
+						<a href="qa/NotoSansOlChiki/Bold-Medium-Regular-SemiBold/SemiBold/diffenator.html">Diffenator report, SemiBold</a>
+					</li>
 									</ul>
 				
 				<h3>Proof sheets</h3>
